Handle CSS layout issue more.

--- a/src/five-son-chess/five-son-chess.less
+++ b/src/five-son-chess/five-son-chess.less
@@ -2,7 +2,7 @@
 
   .board {
     float: left;
-    margin: 0 5px;
+    margin: 5px;
 
     .button {
       height: 50px;
@@ -14,7 +14,6 @@
       color: white;
       cursor: pointer;
       background: green;
-
 
       &.disable {
         background: grey;
