--- a/src/main-page/main-page.less
+++ b/src/main-page/main-page.less
@@ -4,7 +4,7 @@
 
 .app-logo {
   animation: app-logo-spin infinite 20s linear;
-  height: 60px;
+  height: 50px;
 }
 
 .app-header {
@@ -28,14 +28,21 @@
 }
 
 .feature {
+
+  .horizontal-rule {
+    height: 1px;
+    background: black;
+  }
+
   .menus {
     list-style-type: none;
     padding: 0;
-    margin: 10px;
+    margin: 10px 10px 0 10px;
+
 
     li {
-      display: inline;
-      margin-right: 10px;
+      display: inline-block;
+      margin: 0 10px 10px 0;
       padding: 5px 10px;;
       background-color: pink;
 
@@ -51,7 +58,7 @@
         user-select: none;
         margin: -10px;
         padding: 0 10px;
-        line-height: 35px;
+        line-height: 20px;
       }
     }
 
